--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarNav">
+        <div class="collapse navbar-collapse d-flex justify-content-between align-items-center" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
               <a class="nav-link text-white" href="#">Home</a>
@@ -48,7 +48,7 @@
             </li>
           </ul>
           
-          <div>
+          <div class="d-flex align-items-center">
             <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
               <span class="visually-hidden">Loading...</span>
             </div>
