--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     <div class="container flex-grow-1 z-index-2">
       <div class="row h-100 align-items-center">
         <div class="col-6">
-          <p>Esemka Car</p>
-          <h1>Model SV</h1>
-          <ul>
-            <li><span class="">Mileage</span><br><span>555</span>
+          <p class="text-white">Esemka Car</p>
+          <h1 class="text-white">Model SV</h1>
+          <ul class="d-flex list-unstyled gap-5 my-5">
+            <li><span class="text-white">Mileage</span><br><span class="text-danger">555</span>
             </li>
-            <li><span>Engine</span><br><span>2000</span>
+            <li><span class="text-white">Engine</span><br><span class="text-danger">2000</span>
             </li>
-            <li><span>Fuel Economy</span><br><span>8</span>
+            <li><span class="text-white">Fuel Economy</span><br><span class="text-danger">8</span>
             </li>
           </ul>
           <a href="#" class="btn btn-danger fs-4">Buy Now</a>
